apps/services/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: echo
spec:
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
